# cli_app

./: README.md  pyproject.toml
src/my_cli/: __main__.py
src/my_cli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mycli/: __init__.py  commands.py  mycli.py
